Fix hover box rendering on IE 7

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -515,6 +515,7 @@ a.close {
   cursor:default;
 }
 #tripSummary ul {
+  height: 100%;
   background:transparent url(/images/history_hover_bg.gif) no-repeat left -10px;
 }
 #tripSummary li {
